--- a/css/overall.css
+++ b/css/overall.css
@@ -13,7 +13,7 @@
     display: grid;
     height: 150px;
     align-items: center;
-    background-color: #064163;
+    background-color: #2f3136;
     color: azure;
     border-bottom: solid 5px #6DA7C9;
     padding-top: 10px;
@@ -36,8 +36,8 @@
     border-bottom: solid 5px #6DA7C9;
 }
 .section {
-        border-right: solid 1px #6DA7C9;
-        border-bottom: solid 1px #6DA7C9;
+        border-right: solid 5px #6DA7C9;
+        border-bottom: solid 5px #6DA7C9;
 }
 .person {
     background-color: #6DA7C9;
